--- a/glitch.html
+++ b/glitch.html
@@ -1,9 +1,9 @@
   <html>
     <head>
       <meta charset="UTF-8">
-      <title>Boo!</title>
+      <title>Glitch Demo!</title>
     </head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="glitch.css">
     <body id="body">
       <div class="glitch">
         <div class="glitch__img"></div>
@@ -15,6 +15,6 @@
       <canvas id='thumbnailCanvas'></canvas>
     </body>
     <script>
-      require('./renderer.js')
+      require('./glitch-renderer.js')
     </script>
   </html>
