--- a/crack.html
+++ b/crack.html
@@ -1,21 +1,18 @@
-  <html>
-    <head>
-      <meta charset="UTF-8">
-      <title>Cracked Screen Demo!</title>
-    </head>
+<!DOCTYPE html>
+<html>
+  <head>
     <style type="text/css" media="screen">
       html, body {
         margin: 0; padding: 0;
         background: rgba(0, 0, 0, 0);
-        width: 100vw;
-        height: 100vh;
+        height: 100vh; width: 100vw;
       }
       body {
         background-image: url(crack.png);
         background-size: cover;
       }
     </style>
-    <body>
-      <!-- <h2>Hello World</h2> -->
-    </body>
-  </html>
+  </head>
+  <body></body>
+</html>
+
