--- a/glitch.html
+++ b/glitch.html
@@ -1,20 +1,21 @@
-  <html>
-    <head>
-      <meta charset="UTF-8">
-      <title>Glitch Demo!</title>
-    </head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Glitch Demo!</title>
     <link rel="stylesheet" type="text/css" href="glitch.css">
-    <body id="body">
-      <div class="glitch">
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-      </div>
-      <canvas id='thumbnailCanvas'></canvas>
-    </body>
+  </head>
+  <body id="body">
+    <div class="glitch">
+      <div class="glitch__img"></div>
+      <div class="glitch__img"></div>
+      <div class="glitch__img"></div>
+      <div class="glitch__img"></div>
+      <div class="glitch__img"></div>
+    </div>
+    <canvas id="thumbnailCanvas"></canvas>
     <script>
       require('./glitch-renderer.js')
     </script>
-  </html>
+  </body>
+</html>
